@@ -18,7 +18,6 @@ lib/i18n-inflector/errors.rb
 lib/i18n-inflector/inflection_data.rb
 lib/i18n-inflector/inflector.rb
 lib/i18n-inflector/long_comments.rb
-lib/i18n-inflector/shortcuts.rb
 lib/i18n-inflector/util.rb
 lib/i18n-inflector/version.rb
 test/inflector_test.rb
